<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="16dp"
    android:paddingHorizontal="16dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_reg"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvName"/>

    <ImageView
        android:id="@+id/ivUserThumb"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/item_contact"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvId"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textAppearance="?attr/textAppearanceListItem"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/ivUserThumb"
        app:layout_constraintTop_toBottomOf="@id/tvId"
        app:layout_constraintBottom_toTopOf="@+id/tvApelPat"/>

    <TextView
        android:id="@+id/tvApelPat"
        android:layout_marginStart="16dp"
        android:text="@string/item_appat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivUserThumb"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintBottom_toTopOf="@+id/tvApelMat"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/tvApelMat"
        android:layout_marginStart="16dp"
        android:text="@string/item_apmat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivUserThumb"
        app:layout_constraintTop_toBottomOf="@id/tvApelPat"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="?attr/textAppearanceListItem" />


    <ImageButton
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnDelete"
        android:src="@drawable/ic_edit"/>

    <ImageButton
        android:layout_gravity="right"
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_delete"/>
</androidx.constraintlayout.widget.ConstraintLayout>